# bicycle-architecture-compiler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  generate_data.sh  numerics_cumulative.awk  optional_dependencies.txt  parameters.csv  requirements.txt
analyze/: __init__.py  analyze_numerics.py  check_crates.py  generate_random_numerics.py  generate_tables.py  random_numerics.py  read_numerics.py
crates/benchmark/: Cargo.toml
crates/benchmark/src/: lib.rs
crates/bicycle_benchmark/: Cargo.toml  README.md
crates/bicycle_benchmark/src/: lib.rs  main.rs  random.rs
crates/bicycle_cliffords/: Cargo.toml  README.md
crates/bicycle_cliffords/benches/: bench_lookups.rs  bench_table_build.rs
crates/bicycle_cliffords/src/: decomposition.rs  lib.rs  main.rs  measurement.rs  native_measurement.rs  pauli_string.rs  tableau.rs
crates/bicycle_cliffords/tests/: bench_correctness.rs
crates/bicycle_common/: Cargo.toml  README.md
crates/bicycle_common/benches/: bench_syndrome.rs
crates/bicycle_common/src/: lib.rs  parity_check.rs
crates/bicycle_compiler/: Cargo.toml  README.md
crates/bicycle_compiler/benches/: bench_compile.rs
crates/bicycle_compiler/example/: one_synthesis.json  three_blocks.json  two_blocks.json
crates/bicycle_compiler/src/: architecture.rs  basis_changer.rs  compile.rs  language.rs  lib.rs  main.rs  operation.rs  optimize.rs  small_angle.rs
crates/bicycle_compiler/tests/: bench_correctness.rs
crates/bicycle_numerics/: Cargo.toml  README.md  cumulative_instructions.awk
crates/bicycle_numerics/src/: lib.rs  main.rs  model.rs
crates/bicycle_random_numerics/: Cargo.toml  README.md
crates/bicycle_random_numerics/src/: main.rs
crates/gross_code_cliffords/: Cargo.toml
crates/gross_code_cliffords/src/: decomposition.rs  main.rs  pauli_string.rs
crates/numerics/: README.md  test.json
crates/numerics/src/: model.rs
crates/pbc_gross/: README.md  gridsynth_process.py  pbc_schema.json
crates/pbc_gross/src/: compile.rs  lib.rs  main.rs  operation.rs
crates/random_numerics/: README.md
notebooks/: Circuit_failure_probability.ipynb  custom_circuits.ipynb  gross_code_automorphisms.ipynb  matrix_utils.py  polynomial.py  qiskit_parser.py  random_circuits.ipynb
scripts/: README.md  generate_data.sh  generate_measurement_tables.sh  generate_tables_and_random_numerics.sh  local_QA.sh  parameters.csv  qiskit_demo.py  qiskit_demo.sh  run_random_numerics.py  run_random_numerics.sh
src/benchmark/: Cargo.toml
src/benchmark/src/: main.rs  random.rs
src/bicycle_isa/: Cargo.toml
src/bicycle_isa/src/: lib.rs
src/gross_code_cliffords/: Cargo.toml  README.md
src/gross_code_cliffords/src/: decomposition.rs  lib.rs  main.rs  measurement.rs  native_measurement.rs  pauli_rotation.rs  pauli_string.rs  tableau.rs
src/numerics/: Cargo.toml  cumulative_instructions.awk  generate_data.sh
src/numerics/src/: lib.rs  main.rs  model.rs
src/pbc_gross/: Cargo.toml  README.md  gridsynth_process.py  pbc_schema.json
src/pbc_gross/example/: duplicate.csv  one.csv  one_block.json  simple.csv  simple.json  simple.jsonl
src/pbc_gross/src/: architecture.rs  basis_changer.rs  compile.rs  language.rs  lib.rs  main.rs  operation.rs  optimize.rs  parser.rs  small_angle.rs
src/pyftir/: Cargo.toml  pyproject.toml
src/pyftir/src/: lib.rs
src/random_numerics/: Cargo.toml
src/random_numerics/src/: main.rs
