[workspace]
resolver = "2"
members = [
    "crates/bicycle_common",
    "crates/bicycle_cliffords",
    "crates/bicycle_compiler",
    "crates/bicycle_benchmark",
    "crates/bicycle_numerics",
    "crates/bicycle_random_numerics",
]

[workspace.package]
version = "0.1.0"
authors = [
    "Patrick Rall <patrickjrall@ibm.com>",
    "Eddie Schoute <eddie.schoute@ibm.com>",
    "John Lapeyre <john.lapeyre@ibm.com>",
]
description = "Compiler and benchmarking for the bicycle quantum architecture"
license = "Apache-2.0"
keywords = ["quantum", "compiler", "benchmarking", "architecture"]
categories = ["science", "compilers"]
