[package]
name = "bicycle_benchmark"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "Generates PBC circuits that can be used for benchmarking"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
bicycle_common = { path = "../bicycle_common" }
bicycle_compiler = { path = "../bicycle_compiler" }
rand = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }
