[package]
name = "bicycle_cliffords"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Synthesis of Clifford gates in a code module on the bicycle architecture"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
nalgebra = { version = "0.33.2", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
bicycle_common.workspace = true
rand = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }
