[package]
name = "bicycle_compiler"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A compiler for Pauli-based compilation (PBC) circuits to bicycle instructions"

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
bicycle_common.workspace = true
bicycle_cliffords.workspace = true
serde_json = { version = "1.0.140" }
clap = { version = "4.5.36", features = ["derive"] }
fixed = { version = "1.29.0", features = ["serde-str"] }
bitcode = { version = "0.6.6", features = ["serde"] }

[dev-dependencies]
rand = "0.9.0"

[[bench]]
name = "bench_compile"
harness = false
