[package]
name = "bicycle_numerics"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compute numerics for bicycle circuits"

[dependencies]
fixed = "1.29.0"
bicycle_common.workspace = true
bicycle_compiler.workspace = true
bicycle_benchmark.workspace = true
env_logger = "0.11.7"
log = "0.4.27"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
csv = "1.3.1"
