[package]
name = "bicycle_random_numerics"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "Collect numerics for random Pauli-generated rotations run on the bicycle architecture"

[dependencies]
bicycle_common = { path = "../bicycle_common" }
bicycle_compiler = { path = "../bicycle_compiler" }
bicycle_benchmark = { path = "../bicycle_benchmark" }
bicycle_numerics = { path = "../bicycle_numerics" }
bicycle_cliffords = { path = "../bicycle_cliffords" }
env_logger = "0.11.7"
log = "0.4.27"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
csv = "1.3.1"
bitcode = { version = "0.6.6", features = ["serde"] }
fixed = { version = "1.29.0", features = ["serde-str"] }
