[package]
name = "bicycle_random_numerics"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Collect numerics for random Pauli-generated rotations run on the bicycle architecture"

[dependencies]
bicycle_common.workspace = true
bicycle_compiler.workspace = true
bicycle_benchmark.workspace = true
bicycle_numerics.workspace = true
bicycle_cliffords.workspace = true
env_logger = "0.11.7"
log = "0.4.27"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
csv = "1.3.1"
bitcode = { version = "0.6.6", features = ["serde"] }
fixed = { version = "1.29.0", features = ["serde-str"] }
