[package]
name = "gross_code_cliffords"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
env_logger = "0.11.6"
log = "0.4.26"
nalgebra = { version = "0.33.2", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
bicycle_isa = { path = "../bicycle_isa" }
rand = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }
