[package]
name = "numerics"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
fixed = "1.29.0"
pbc_gross = { path = "../pbc_gross" }
benchmark = { path = "../benchmark" }
env_logger = "0.11.7"
log = "0.4.27"
clap = { version = "4.5.36", features = ["derive"] }
bicycle_isa = { path = "../bicycle_isa" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
csv = "1.3.1"
