[package]
name = "pbc_gross"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bitcode = { version = "0.6.5", features = ["serde"] }
csv = "1.3.1"
env_logger = "0.11.6"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
bicycle_isa = { path = "../bicycle_isa" }
gross_code_cliffords = { path = "../gross_code_cliffords" }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }

[dev-dependencies]
rand = "0.9.0"
