[package]
name = "pbc_gross"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bitcode = { version = "0.6.5", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
bicycle_isa = { path = "../bicycle_isa" }
gross_code_cliffords = { path = "../gross_code_cliffords" }
serde_json = { version = "1.0.140" }
clap = { version = "4.5.36", features = ["derive"] }
fixed = { version = "1.29.0", features = ["serde-str"] }

[dev-dependencies]
rand = "0.9.0"
