[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyftir"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
packages = []
dependencies = []

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.maturin]
features = ["pyo3/extension-module"]
profile = "release"
