[package]
name = "random_numerics"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bicycle_isa = { path = "../bicycle_isa" }
pbc_gross = { path = "../pbc_gross" }
benchmark = { path = "../benchmark" }
numerics = { path = "../numerics" }
gross_code_cliffords = { path = "../gross_code_cliffords" }
env_logger = "0.11.7"
log = "0.4.27"
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
csv = "1.3.1"
bitcode = { version = "0.6.6", features = ["serde"] }
fixed = { version = "1.29.0", features = ["serde-str"] }
